[3.8] bpo-39579: Fix Attribute end_col_offset to point at the current node (GH-18405) (GH-18408)

(cherry picked from commit d2e1098641f98594702ef29049c3c4a3f394786f)





https://bugs.python.org/issue39579



Automerge-Triggered-By: @gvanrossum